<resources>
    <string name="app_name" translatable="false">TweakGS2</string>
    <string name="current_value">Current:</string>
    <string name="saved_value">Saved:</string>
    <string name="go_back">Go back</string>
    <string name="internal_sdcard">Internal sdcard</string>
    <string name="external_sdcard">External sdcard</string>
    <string name="path">Path</string>
    <string name="directory">Directory</string>
    <string name="file">Files</string>
    <string name="set_on_boot">Set on boot</string>
    <string name="not_support">Not support</string>
    <string name="none">none</string>
    <string name="option">Option</string>
    <string name="frequency">Frequency</string>
    <string name="voltage">Voltage</string>
    <string name="apply">Apply</string>
    <string name="version">Version</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="create">Create</string>
    <string name="label">Label</string>
    <string name="up_threshold">Up threshold</string>
    <string name="down_threshold">Down threshold</string>
    <string name="threshold">Threshold</string>
    <string name="not_rooted_message">ROM is not rooted in use</string>
    <string name="rom_manager_title">ROM Manager</string>
    <string name="dual_boot_category">Dual boot</string>
    <string name="boot_rom">Boot ROM</string>
    <string name="reboot_category">Reboot</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_summary">Normal Reboot</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_summary">Reboot to recovery mode</string>
    <string name="download">Download</string>
    <string name="download_summary">Reboot to download mode</string>
    <string name="nandroid_category">Backup/Restore</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup current ROM</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore from backup</string>
    <string name="manage">Manage</string>
    <string name="manage_summary">Manage backups</string>
    <string name="flash_category">Flash</string>
    <string name="install_zip">Install zip</string>
    <string name="install_zip_summary">Install zip</string>
    <string name="backup_name">Backup name</string>
    <string name="select_zip_title">Select zip file</string>
    <string name="select_backup_title">Select backup</string>
    <string name="do_install_zip">Install zip file</string>
    <string name="do_restore">Restore</string>
    <string name="backup_manage_rename">Rename</string>
    <string name="backup_manage_rename_message">Enter a new backup name</string>
    <string name="backup_manage_delete">Delete</string>
    <string name="backup_manage_delete_confirm">Do you want to delete the backup?</string>
    <string name="special_category">Special</string>
    <string name="sbl_backup_title">Sbl backup</string>
    <string name="sbl_backup_summary">Sbl pertition backup</string>
    <string name="efs_backup_title">efs backup</string>
    <string name="efs_backup_summary">efs pertition backup</string>
    <string name="backup_completed">backup completed.</string>
    <string name="general_title">General</string>
    <string name="low_memory_killer_title">Low memory killer</string>
    <string name="low_memory_killer_summary">Change low memory task killer settings</string>
    <string name="virtual_memory_title">Virtual memory</string>
    <string name="virtual_memory_summary">Change virtual memory settings</string>
    <string name="system_property_title">System property</string>
    <string name="system_property_summary">Change system property\nNotice: Take effect after reboot</string>
    <string name="io_scheduler_tite">I/O scheduler</string>
    <string name="gsm_network_tweak_title">3G network tweak</string>
    <string name="gsm_network_tweak_summary_on">3G network tweak enabled\nNotice: Take effect after reboot</string>
    <string name="gsm_network_tweak_summary_off">3G network tweak disabled\nNotice: Take effect after reboot</string>
    <string name="external_sd_bind_title">External sdcard bind</string>
    <string name="external_sd_bind_summary_on">External sdcard mount to /sdcard/external_sd\nCurrent state is mounted</string>
    <string name="external_sd_bind_summary_off">External sdcard mount to /sdcard/external_sd\nCurrent state is not mounted</string>
    <string name="replace_key_title">Replace back / menu key</string>
    <string name="replace_key_summary_on">Replace back / menu key enabled</string>
    <string name="replace_key_summary_off">Replace back / menu key disabled</string>
    <string name="sysprop_boot_sound_title">Boot sound</string>
    <string name="sysprop_boot_sound_summary_on">Boot sound enabled</string>
    <string name="sysprop_boot_sound_summary_off">Boot sound disabled</string>
    <string name="sysprop_lcd_density_title">LCD density</string>
    <string name="sysprop_camera_sound_title">Force shutter sound</string>
    <string name="sysprop_camera_sound_summary_on">Force shutter sound enabled</string>
    <string name="sysprop_camera_sound_summary_off">Force shutter sound disabled</string>
    <string name="sysprop_crt_effect_title">CRT effect</string>
    <string name="sysprop_crt_effect_summary_on">CRT effect enabled</string>
    <string name="sysprop_crt_effect_summary_off">CRT effect disabled</string>
    <string name="sysprop_android_logger_title">Android logger</string>
    <string name="sysprop_android_logger_summary_on">Android logger enabled</string>
    <string name="sysprop_android_logger_summary_off">Android logger disabled</string>
    <string name="sysprop_cifs_title">CIFS support</string>
    <string name="sysprop_cifs_summary_on">CIFS support enabled</string>
    <string name="sysprop_cifs_summary_off">CIFS support disabled</string>
    <string name="sysprop_ntfs_title">NTFS support</string>
    <string name="sysprop_ntfs_summary_on">NTFS support enabled</string>
    <string name="sysprop_ntfs_summary_off">NTFS support disabled</string>
    <string name="sysprop_j4fs_title">J4FS support</string>
    <string name="sysprop_j4fs_summary_on">J4FS support enabled</string>
    <string name="sysprop_j4fs_summary_off">J4FS support disabled</string>
    <string name="sysprop_usb_config_title">USB Config</string>
    <string name="sysprop_switch_external_title">Switch sdcard mount point</string>
    <string name="sysprop_switch_external_summary_on">Switch dcard mount point enabled</string>
    <string name="sysprop_switch_external_summary_off">Switch dcard mount point enabled</string>
    <string name="sysprop_music_volume_steps_title">Music volume steps</string>
    <string name="sysprop_scrolling_cache_title">Scrolling cache</string>
    <string name="sysprop_scrolling_cache_summary_on">scrolling cache enabled</string>
    <string name="sysprop_scrolling_cache_summary_off">scrolling cache disabled</string>
    <string name="sysprop_bottom_action_bar_title">Bottom action bar</string>
    <string name="sysprop_bottom_action_bar_summary_on">Bottom action bar enabled</string>
    <string name="sysprop_bottom_action_bar_summary_off">Bottom action bar disabled</string>
    <string name="sysprop_bottom_title_bar_title">Bottom title bar</string>
    <string name="sysprop_bottom_title_bar_summary_on">Bottom title bar enabled</string>
    <string name="sysprop_bottom_title_bar_summary_off">Bottom title bar disabled</string>
    <string name="rom_system_category">System area</string>
    <string name="rom_data_category">Data area</string>
    <string name="rom_partition">Partition</string>
    <string name="rom_image">Image</string>
    <string name="rom_path">Path</string>
    <string name="cpu_control_title">CPU control</string>
    <string name="cpu_governor_category">Governor</string>
    <string name="cpu_governor_select">Governor select</string>
    <string name="cpu_governor_setting">Governor setting</string>
    <string name="cpu_freq_category">Frequency</string>
    <string name="cpu_max_freq">Max</string>
    <string name="cpu_min_freq">Min</string>
    <string name="cpu_max_suspend_freq">Max (In suspend)</string>
    <string name="cpu_min_suspend_freq">Min (In suspend)</string>
    <string name="cpu_voltage_category">Voltage</string>
    <string name="cpu_voltage_title">Voltage control</string>
    <string name="bus_control_title">Bus control</string>
    <string name="bus_asv_group_title">ASV group</string>
    <string name="bus_up_threshold_title">Up threshold</string>
    <string name="bus_down_threshold_title">Down threshold</string>
    <string name="gpu_control_title">GPU control</string>
    <string name="gpu_high_state_category">High performance state</string>
    <string name="gpu_low_state_category">Low performance state</string>
    <string name="display_title">Display setting</string>
    <string name="lcd_category">LCD</string>
    <string name="lcd_type">LCD type</string>
    <string name="gamma_adjust">Gammma adjust</string>
    <string name="mdnie_category">mDNie</string>
    <string name="mdnie_function">mDNie function</string>
    <string name="mdnie_function_on">mDNie enabled</string>
    <string name="mdnie_function_off">mDNie disabled</string>
    <string name="mdnie_mode">Color adjust</string>
    <string name="mdnie_mode_on">Color adjust enabled</string>
    <string name="mdnie_mode_off">Color adjust disabled</string>
    <string name="mdnie_color_cb">Color (Blue element)</string>
    <string name="mdnie_color_cr">Color (Red element)</string>
    <string name="hw_volumes">HW Volumes</string>
    <string name="boot_sound_enabled_title">Boot sound</string>
    <string name="boot_sound_enabled_on_summary">Boot sound enabled</string>
    <string name="boot_sound_enabled_off_summary">Boot sound disabled</string>
    <string name="boot_sound_volume_title">Boot sound volume</string>
    <string name="boot_sound_note">Please put \'bootsound.mp3\' to \'/system/media/\' To enable the boot sound</string>
    <string name="notification_title">Notification setting</string>
    <string name="notification_led_category">Touchkey</string>
    <string name="notification_led_timeout_title">Backlight Timeout</string>
    <string name="notification_bln_category">LED Notifications</string>
    <string name="notification_bln_enabled_title">Notifications</string>
    <string name="notification_bln_enabled_summary">Enable kernel support for LED Notifications.  Note: An active notification will prevent the phone from entering deep sleep</string>
    <string name="notification_bln_timeout_title">Notification Timeout</string>
    <string name="notification_bln_effect_title">Notification Effect</string>
    <string name="notification_bln_blink_on_interval_title">Blink on interval</string>
    <string name="notification_bln_blink_off_interval_title">Blink off interval</string>
    <string name="notification_bln_on_incoming_title">BLN on incoming</string>
    <string name="notification_bln_on_incoming_summary_on">BLN on incoming enabled</string>
    <string name="notification_bln_on_incoming_summary_off">BLN on incoming disabled</string>
    <string name="notification_bln_test">Notification test</string>
    <string name="about_title">About TweakGS2</string>
    <string name="about_check_update_title">Check for update TweakGS2</string>
    <string name="about_check_update_summary">This is a paid version to accept the donation. Without a donation, it is also possible to use the free version</string>
    <string name="all_recommend_title">Recommended Settings</string>
    <string name="all_recommend_summary">Recommended to set the value of all items</string>
    <string name="all_reset_title">Reset Settings</string>
    <string name="all_reset_summary">Initialize the set of all items</string>
</resources>