<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/about_title">

    <PreferenceScreen
        android:key="about_version"
        android:title="@string/version">
	</PreferenceScreen>
	<PreferenceScreen
        android:key="about_check_update"
        android:title="@string/about_check_update_title"
        android:summary="@string/about_check_update_summary">
	</PreferenceScreen>
	<PreferenceScreen
    	android:key="about_recommend"
        android:title="@string/all_recommend_title"
        android:summary="@string/all_recommend_summary">
    </PreferenceScreen>
    <PreferenceScreen
    	android:key="about_reset"
        android:title="@string/all_reset_title"
        android:summary="@string/all_reset_summary">
    </PreferenceScreen>

</PreferenceScreen>
