<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/cpu_control_title">

    <PreferenceCategory
        android:key="cpu_governor_category"
        android:title="@string/cpu_governor_category">
        <ListPreference
            android:key="cpu_governor_list"
            android:title="@string/cpu_governor_select" />
        <PreferenceScreen
            android:key="cpu_governor_setting"
            android:title="@string/cpu_governor_setting" />
        <CheckBoxPreference
            android:key="cpu_governor_set_on_boot"
            android:title="@string/set_on_boot" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cpu_freq_category"
        android:title="@string/cpu_freq_category">
        <ListPreference
            android:key="cpu_max_freq"
            android:title="@string/cpu_max_freq" />
        <ListPreference
            android:key="cpu_min_freq"
            android:title="@string/cpu_min_freq" />
        <ListPreference
            android:key="cpu_max_suspend_freq"
            android:title="@string/cpu_max_suspend_freq"
            android:enabled="false" />
        <ListPreference
            android:key="cpu_min_suspend_freq"
            android:title="@string/cpu_min_suspend_freq"
            android:enabled="false" />
        <CheckBoxPreference
            android:key="cpu_freq_set_on_boot"
            android:title="@string/set_on_boot" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cpu_voltage_category"
        android:title="@string/cpu_voltage_category">
        <PreferenceScreen
            android:key="cpu_voltage"
            android:title="@string/cpu_voltage_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="net.sakuramilk.TweakGS2"
                android:targetClass="net.sakuramilk.TweakGS2.CpuControl.CpuVoltagePreferenceActivity" />
        </PreferenceScreen>
        <CheckBoxPreference
            android:key="cpu_volt_set_on_boot"
            android:title="@string/set_on_boot" />
    </PreferenceCategory>

</PreferenceScreen>