<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notification_title" >

    <PreferenceCategory
        android:key="notification_led_category"
        android:title="@string/notification_led_category">
        <ListPreference
            android:key="notification_led_timeout"
            android:title="@string/notification_led_timeout_title"
            android:entries="@array/notification_led_timeout_entries"
            android:entryValues="@array/notification_led_timeout_values"
            android:enabled="false" />
        <!--<CheckBoxPreference
            android:key="notification_led_fadeout"
            android:title="@string/notification_led_fadeout_title"
            android:summaryOn="@string/notification_led_fadeout_summary"
            android:summaryOff="@string/notification_led_fadeout_summary"
               android:enabled="false" />-->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_bln_category"
        android:title="@string/notification_bln_category">
        <CheckBoxPreference
            android:key="notification_bln_enabled"
            android:title="@string/notification_bln_enabled_title"
            android:summaryOn="@string/notification_bln_enabled_summary"
            android:summaryOff="@string/notification_bln_enabled_summary"
               android:enabled="false" />
        <ListPreference
            android:key="notification_bln_timeout"
            android:title="@string/notification_bln_timeout_title"
            android:entries="@array/notification_bln_timeout_entries"
            android:entryValues="@array/notification_bln_timeout_values"
            android:enabled="false" />
        <ListPreference
            android:key="notification_bln_effect"
            android:title="@string/notification_bln_effect_title"
            android:entries="@array/notification_bln_effect_entries"
            android:entryValues="@array/notification_bln_effect_values"
            android:enabled="false" />
        <ListPreference
            android:key="notification_bln_blink_on_interval"
            android:title="@string/notification_bln_blink_on_interval_title"
            android:entries="@array/notification_bln_blink_interval_entries"
            android:entryValues="@array/notification_bln_blink_interval_values"
            android:enabled="false" />
        <ListPreference
            android:key="notification_bln_blink_off_interval"
            android:title="@string/notification_bln_blink_off_interval_title"
            android:entries="@array/notification_bln_blink_interval_entries"
            android:entryValues="@array/notification_bln_blink_interval_values"
            android:enabled="false" />
        <CheckBoxPreference
            android:key="notification_bln_on_incoming"
            android:title="@string/notification_bln_on_incoming_title"
            android:summaryOn="@string/notification_bln_on_incoming_summary_on"
            android:summaryOff="@string/notification_bln_on_incoming_summary_off"
            android:enabled="false" />
        <PreferenceScreen
            android:key="notification_bln_test"
            android:title="@string/notification_bln_test" />
    </PreferenceCategory>

</PreferenceScreen>
