<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/hw_volumes">

    <CheckBoxPreference
        android:key="boot_sound_enabled"
        android:title="@string/boot_sound_enabled_title"
        android:summaryOn="@string/boot_sound_enabled_on_summary"
        android:summaryOff="@string/boot_sound_enabled_off_summary" />
    <ListPreference
        android:key="boot_sound_volume"
        android:title="@string/boot_sound_volume_title"
        android:entries="@array/boot_sound_volume_entries"
        android:entryValues="@array/boot_sound_volume_values" />
    <PreferenceScreen
        android:summary="@string/boot_sound_note"
        android:selectable="false" />

</PreferenceScreen>