<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/bus_control_title">

    <ListPreference
        android:key="bus_asv_group"
        android:title="@string/bus_asv_group_title"
        android:entries="@array/asv_group_entries"
        android:entryValues="@array/asv_group_values"
        android:enabled="false" />

    <net.sakuramilk.TweakGS2.Parts.SeekBarPreference
        android:key="bus_up_threshold"
        android:title="@string/bus_up_threshold_title"
        android:dialogTitle="@string/bus_up_threshold_title"
        android:enabled="false" />

    <net.sakuramilk.TweakGS2.Parts.SeekBarPreference
        android:key="bus_down_threshold"
        android:title="@string/bus_down_threshold_title"
        android:dialogTitle="@string/bus_down_threshold_title"
        android:enabled="false" />

    <CheckBoxPreference   
        android:key="bus_set_on_boot"  
        android:title="@string/set_on_boot" />

</PreferenceScreen>
