<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root_pref"
    android:title="@string/cpu_voltage_title">

    <PreferenceCategory
        android:key="cpu_voltage_option_category"
        android:title="@string/option">
        <CheckBoxPreference   
            android:key="cpu_voltage_set_on_boot"  
            android:title="@string/set_on_boot"
            android:enabled="false" />
    </PreferenceCategory>

</PreferenceScreen>